--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -288,25 +288,25 @@
                   <tr>
                     <td class="pull-left mobile-header-padding-left" style="vertical-align: middle;">
                       <a target="_blank" href="<%= @home_link %>">
-                        <img src="<%= reseller_logo_path(@user.customer.reseller) %>" alt="<%= "Logo #{@user.customer.reseller.name}" %>" width="137px" height="47px" />
+                        <img src="<%= reseller_logo_path(@customer.reseller) %>" alt="<%= "Logo #{@customer.reseller.name}" %>" width="137px" height="47px" />
                       </a>
                     </td>
 
                     <td class="pull-right mobile-header-padding-right" style="color: #4d4d4d;">
-                      <% if @user.customer.reseller.facebook_url %>
-                        <a target='_blank' href="<%= @user.customer.reseller.facebook_url %>" style="text-decoration:none;">
+                      <% if @customer.reseller.facebook_url %>
+                        <a target='_blank' href="<%= @customer.reseller.facebook_url %>" style="text-decoration:none;">
                           <img src="<%= network_icon_url(:facebook) %>" alt="<%= I18n.t('user_mailer.layout.links.facebook') %>" width="30px" height="30px" style="margin-right:30px;" />
                         </a>
                       <% end %>
 
-                      <% if @user.customer.reseller.linkedin_url %>
-                        <a target='_blank' href="<%= @user.customer.reseller.linkedin_url %>" data-default="placeholder" style="text-decoration:none;">
+                      <% if @customer.reseller.linkedin_url %>
+                        <a target='_blank' href="<%= @customer.reseller.linkedin_url %>" data-default="placeholder" style="text-decoration:none;">
                           <img src="<%= network_icon_url(:linkedin) %>" alt="<%= I18n.t('user_mailer.layout.links.linkedin') %>" width="30px" height="30px" style="margin-right:30px;" />
                         </a>
                       <% end %>
 
-                      <% if @user.customer.reseller.twitter_url %>
-                        <a target='_blank' href="<%= @user.customer.reseller.twitter_url %>" data-default="placeholder" style="text-decoration:none;">
+                      <% if @customer.reseller.twitter_url %>
+                        <a target='_blank' href="<%= @customer.reseller.twitter_url %>" data-default="placeholder" style="text-decoration:none;">
                           <img src="<%= network_icon_url(:twitter) %>" alt="<%= I18n.t('user_mailer.layout.links.twitter') %>" width="30px" height="30px" style="margin-right:30px;" />
                         </a>
                       <% end %>
