--- a/app/views/vehicle_usages/_form.html.erb
+++ b/app/views/vehicle_usages/_form.html.erb
@@ -64,7 +64,7 @@
                 value: distance_in_user_unit(@vehicle_usage.vehicle.max_ride_distance, @current_user.prefered_unit),
                 placeholder: @vehicle_usage.vehicle_usage_set.max_ride_distance ? t('customers.form.max_ride_distance_default', n: distance_in_user_unit(@vehicle_usage.vehicle_usage_set.max_ride_distance, @current_user.prefered_unit)) : '',
                 step: 'any',
-                class: 'form-control', min: 0, step: 0.1 %>
+                class: 'form-control', min: 0 %>
               <span class="input-group-addon"><%= current_user.prefered_unit == 'mi' ? t('all.unit.miles') : t('all.unit.kms') %></span>
             </div>
             <p class="help-block"><%= current_user.prefered_unit == 'mi' ? t('vehicles.form.max_ride_distance.help_miles') : t('vehicles.form.max_ride_distance.help') %></p>
