--- a/app/views/plannings/_edit.html.haml
+++ b/app/views/plannings/_edit.html.haml
@@ -137,7 +137,17 @@
                       %i.fa.fa-desktop.fa-fw
                       = current_user.customer.default_callback_name || t('plannings.edit.customer_external_callback_url.action')
                     %li.divider{role: "separator"}
-                    -# Device section removed
+                - @planning.customer.device.configured_definitions.each do |key, definition|
+                  - if @planning.routes.any?{ |route| route.vehicle_usage_id && !route.vehicle_usage.vehicle.devices.key?(definition[:device]) }
+                    - definition[:route_operations].each do |route_operation|
+                      - options = { planning_id: "#{@planning.id}" }
+                      - options.merge!({ toggle: 'tooltip', title: "#{t(plannings.edit.tomtom_send_waypoints.title).html_safe}" }) if route_operation.is_a?(Hash) && route_operation[:send].to_s == 'waypoints'
+                      - options.merge!({ service: "#{definition[:device]}", operation: "#{route_operation.is_a?(Hash) ? route_operation.keys[0] : route_operation}" })
+                      %li.link.device-operation{data: options}
+                        %i.fa.fa-mobile.fa-rotate-90.fa-fw
+                          - translation = "#{definition[:device]}_#{route_operation.is_a?(Hash) ? route_operation.keys[0].to_s + '_' + route_operation.values[0].to_s : route_operation}.action"
+                        = t("plannings.edit.#{translation}")
+                  %li.divider{role: "separator"}
                 %li
                   = link_to api_web_v01_print_planning_path(@planning) do
                     %i.fa.fa-print.fa-fw
