Fix vehicle_usage tags

--- a/app/views/vehicle_usages/_form.html.erb
+++ b/app/views/vehicle_usages/_form.html.erb
@@ -102,9 +102,9 @@
         <% end %>
 
         <% if @vehicle_usage_sets.count < 2 || (!@vehicle_usage.vehicle.tags.nil? && @vehicle_usage.vehicle.tags.count > 0) %>
-          <%= f.select :tag_ids, t('activerecord.attributes.vehicle.tag_ids'), options_for_select(@vehicle_usage.vehicle.customer.tags.map{ |tag| [tag.label, tag.id, {'data-color' => tag.color && tag.color[1..-1], 'data-icon' => tag.icon}]}, @vehicle_usage.vehicle.tags.collect(&:id)), {}, {multiple: true, input_group: content_tag('i', '', class: 'fa fa-tags fa-fw')} do %>
-            <p class="help-block"><%= t('vehicles.form.tags_help') %></p>
-          <% end %>
+          <div id="vehicle_usage_tag_ids_input">
+            <%= f.select :tag_ids, options_for_select(@vehicle_usage.vehicle.customer.tags.map{ |tag| [tag.label, tag.id, {'data-color' => tag.color && tag.color[1..-1], 'data-icon' => tag.icon}]}, @vehicle_usage.vehicle.tags.collect(&:id)), {label: t('activerecord.attributes.vehicle.tag_ids'), help: t('vehicles.form.tags_help') }, {multiple: true, input_group: content_tag('i', '', class: 'fa fa-tags fa-fw')} %>
+          </div>
         <% end %>
 
         <div id="vehicle_router_input" class="form-group">
@@ -463,7 +463,7 @@
       </div>
     </div>
     <% if @vehicle_usage_sets.count > 1 || @vehicle_usage.tags.count > 0 %>
-      <div>
+      <div id="vehicle_usage_vehicle_tag_ids_input" >
         <%= f.select :tag_ids, options_for_select(@vehicle_usage.vehicle.customer.tags.map{ |tag| [tag.label, tag.id, {'data-color' => tag.color && tag.color[1..-1], 'data-icon' => tag.icon}]}, @vehicle_usage.tags.collect(&:id)),
           {help: t('vehicle_usages.form.tags_help')},
           {multiple: true, input_group: content_tag('i', '', class: 'fa fa-tags fa-fw')}
