--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -25,7 +25,7 @@
     <div id="pager" class="pager pull-right" style="padding: unset;">
       <form>
         <select class="pagesize btn btn-default btn-sm dropdown-toggle">
-          <option value="100"><%=t('list.rows')%></option>
+          <option selected disabled hidden value="100"><%=t('list.rows')%></option>
           <option value="100">100</option>
           <option value="200">200</option>
           <option value="500">500</option>
