--- a/app/assets/stylesheets/destinations.css.scss
+++ b/app/assets/stylesheets/destinations.css.scss
@@ -351,6 +351,49 @@
       float: right;
     }
   }
+
+  /* pager wrapper, div */
+  .tablesorter-pager {
+    padding: 5px;
+  }
+
+  .pager {
+    margin: unset;
+  }
+  /* pager wrapper, in thead/tfoot */
+  td.tablesorter-pager {
+    background-color: #e6eeee;
+    margin: 0; /* needed for bootstrap .pager gets a 18px bottom margin */
+  }
+  /* pager navigation arrows */
+  .tablesorter-pager img {
+    vertical-align: middle;
+    margin-right: 2px;
+    cursor: pointer;
+  }
+
+  /* pager output text */
+  .tablesorter-pager .pagedisplay {
+    padding: 0 5px 0 5px;
+    text-align: center;
+
+    .ts-page {
+      min-width: 40px
+    }
+  }
+
+  /*** css used when "updateArrows" option is true ***/
+  /* the pager itself gets a disabled class when the number of rows is less than the size */
+  .tablesorter-pager.disabled {
+    display: none;
+  }
+  /* hide or fade out pager arrows when the first or last row is visible */
+  .tablesorter-pager .disabled {
+    /* visibility: hidden */
+    opacity: 0.5;
+    filter: alpha(opacity=50);
+    cursor: default;
+  }
 }
 
 .ui-helper-hidden-accessible {
