--- a/app/templates/stops/_list.mustache
+++ b/app/templates/stops/_list.mustache
@@ -247,7 +247,7 @@
                 </li>
                 <li role="separator" class="divider"></li>
               {{/praxedo}}
-              <li><a href="/routes/{{route_id}}"><i class="fa fa-print fa-fw"></i> {{#i18n}}plannings.edit.export.print{{/i18n}}</a></li>
+              <li><a href="/api-web/0.1/plannings/{{planning_id}}/routes/{{route_id}}/print"><i class="fa fa-print fa-fw"></i> {{#i18n}}plannings.edit.export.print{{/i18n}}</a></li>
               <li role="separator" class="divider"></li>
               <li><a class="export_spreadsheet"><i class="fa fa-table fa-fw"></i> {{#i18n}}plannings.edit.export.spreadsheet{{/i18n}}</a></li>
               <li role="separator" class="divider"></li>
