--- a/app/views/stops/edit.html.haml
+++ b/app/views/stops/edit.html.haml
@@ -52,38 +52,45 @@
             %i.fa.fa-circle-info
           .col-xs-9
             = @destination.detail
+      - if @destination.comment
+        .row
+          .col-xs-1
+            %i.fa.fa-comment-dots
+          .col-xs-9
+            = @destination.comment
       - if @destination.phone_number
         .row
           .col-xs-1
             %i.fa.fa-phone
-          .co-xs-9
-            = @destination.phone_number
+          .col-xs-9
+            %a{ href: "tel:#{@destination.phone_number}" }
+              = @destination.phone_number
 
-    - if @visit&.time_window_start_1
-      .row
-        .col-xs-1
-          %i.fa.fa-clock.fa-fw
-        .col-xs-9
-          = @visit.time_window_start_1_time
-          \-
-          = @visit.time_window_end_1_time
-    - if @visit&.time_window_start_2
-      .row
-        .col-xs-1
-          %i.fa.fa-clock.fa-fw
-        .col-xs-9
-          = @visit.time_window_start_2_time
-          \-
-          = @visit.time_window_end_2_time
-
-    - if @visit.default_quantities?
-      - visit_quantities(@stop.visit, @route.vehicle_usage.vehicle).each do |units|
+      - if @visit&.time_window_start_1
         .row
           .col-xs-1
-            %i.fa.fa-fw{ class: units[:unit_icon] }
+            %i.fa.fa-clock.fa-fw
           .col-xs-9
-            .quantity
-              = units[:quantity_formatted]
+            = @visit.time_window_start_1_time
+            \-
+            = @visit.time_window_end_1_time
+      - if @visit&.time_window_start_2
+        .row
+          .col-xs-1
+            %i.fa.fa-clock.fa-fw
+          .col-xs-9
+            = @visit.time_window_start_2_time
+            \-
+            = @visit.time_window_end_2_time
+
+      - if @visit.default_quantities?
+        - visit_quantities(@stop.visit, @route.vehicle_usage.vehicle).each do |units|
+          .row
+            .col-xs-1
+              %i.fa.fa-fw{ class: units[:unit_icon] }
+            .col-xs-9
+              .quantity
+                = units[:quantity_formatted]
       .row
         .form-group
           = bootstrap_form_for @stop, url: stop_path, method: :patch, layout: :horizontal, remote: true do |f|
