--- a/app/assets/stylesheets/stops.css.scss
+++ b/app/assets/stylesheets/stops.css.scss
@@ -13,24 +13,25 @@
   }
 
   .mobile {
+    font-size: 14px !important;
     position: absolute;
     top: $mobile-header-height;
     width: 100%
   }
 
-  .label-planned {
+  .label-planned, .label-intransit {
     background-color: $primary-color;
   }
 
-  .label-started {
+  .label-started, .label-exception {
     background-color: var(--warning);
   }
 
-  .label-finished {
+  .label-finished, .label-delivered {
     background-color: var(--success);
   }
 
-  .label-rejected {
+  .label-rejected, .label-undelivered {
     background-color: var(--danger);
   }
 
@@ -48,6 +49,10 @@
 
   .active {
     box-shadow: 2px 3px 2px rgba(0,0,0,.4);
+    border: 4px solid #ffffff96;
+    border-radius: 2px !important;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
 }
 
