--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -689,6 +689,11 @@ div.grid-container {
 }
 
 // Backport
+.justify-content-start {
+  justify-content: flex-start !important;
+}
+
+// Backport
 .justify-content-center {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
@@ -765,6 +770,17 @@ div.grid-container {
 .mb-3 {
   margin-bottom: 1rem !important;
 }
+
+// Backports
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+
+// Backports
+.p-0 {
+  padding: 0 !important;
+}
+
 
 .card {
   // scss-docs-start card-css-vars
