--- a/app/assets/stylesheets/stops.css.scss
+++ b/app/assets/stylesheets/stops.css.scss
@@ -10,6 +10,10 @@
     z-index: 1;
     padding-left: 5px;
     border-bottom: 1px solid $grey-color;
+
+    .company-logo {
+      height: calc(#{$mobile-header-height} - 8px);
+    }
   }
 
   .mobile {
